kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ppx-authentication-service
  namespace: #{K8S_NAMESPACE}#
  labels:
    app: authentication-app
spec:
  type: ClusterIP
  selector:
    app: authentication-app
  ports:
  - port: 80
    targetPort: auth-port
    protocol: TCP
